deploy file created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello Github Pages</title>
   </head>
   <body>
-    <p>Hello GitHub Pagess!</p>
+    <p>Hello GitHub Pages!</p>
   </body>
 </html>
