Github Pages deployed using Github Actions from roadmap example

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello Github Pages</title>
   </head>
   <body>
-    <p>Hello GitHub Pages!</p>
+    <p>All changes to index.html can now be deployed using Github Actions!</p>
   </body>
 </html>
